--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,13 @@ docs/_build/
 
 # Pyenv
 .python-version
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
+
